# targetfinder-demo

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md  installation.md  techniques.md  videos.md
examples/: run_bubble.py  run_dynaspot.py  run_ninja.py  run_semantic.py  run_targetfinder.py
installation/: index.html
search/: search_index.json
techniques/: index.html
videos/: index.html
